# NdkStudy

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rocky/ndkstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  maniulog.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/rocky/ndkstudy/: MainActivity.java
app/src/main/java/com/rocky/ndkstudy/live/: LivePusher.java
app/src/main/java/com/rocky/ndkstudy/live/channel/: VideoChannel.java
app/src/main/java/com/rocky/ndkstudy/live/utils/: ImageUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rocky/ndkstudy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
